# iros2020_changkyu

./: README.md
dataset/objects/: book_label.pgm  box_label.pgm  cramp_label.pgm  crimp_label.pgm  hammer_label.pgm  ranch_label.pgm  snack_label.pgm  toothpaste_label.pgm  windex_label.pgm
software/cellphysics/: ActiveDiffPhysics.py  DiffPhysics.py  OtherPhysics.py  PhysicsBase.py  __init__.py  debug_result.py  draw_result.py  draw_sav.py  plot_result.py  plot_result_active.py  run_expr.py  run_expr_active.py  setups_sim.py
software/kinoplanner/: CellPhysicsPlanner.py  KinoPlanner.py  ProbPhysicsPlanner.py  __init__.py  draw_result_prop.py  plot_result.py  plot_result_prop.py  run_expr.py  run_expr_prop.py
software/ros-package/src/control/iiwa_pkgs/active_vision/: CMakeLists.txt  package.xml
software/ros-package/src/control/iiwa_pkgs/active_vision/include/: data_collection.hpp
software/ros-package/src/control/iiwa_pkgs/active_vision/launch/: data_collection.launch
software/ros-package/src/control/iiwa_pkgs/active_vision/src/: collect_data.cpp  data_collection.cpp
software/ros-package/src/control/iiwa_pkgs/camera_calib/: CMakeLists.txt  package.xml  states.yaml
software/ros-package/src/control/iiwa_pkgs/camera_calib/input/: cam_info.txt  cam_pose_10.txt  cam_pose_13.txt  cam_pose_2.txt  cam_pose_4.txt  cam_pose_5.txt  cam_pose_7.txt  cam_pose_8.txt  cam_pose_9.txt  ee_pose_0.txt  ee_pose_13.txt  ee_pose_15.txt  ee_pose_7.txt
software/ros-package/src/control/iiwa_pkgs/camera_calib/launch/: camera_calib_auto.launch
software/ros-package/src/control/iiwa_pkgs/camera_calib/output/: cam_pose_0.txt  cam_pose_1.txt  cam_pose_11.txt  cam_pose_12.txt  cam_pose_14.txt  cam_pose_15.txt  cam_pose_16.txt  cam_pose_3.txt  cam_pose_6.txt  ee_pose_1.txt  ee_pose_10.txt  ee_pose_11.txt  ee_pose_12.txt  ee_pose_14.txt  ee_pose_2.txt  ee_pose_3.txt  ee_pose_4.txt  ee_pose_5.txt  ee_pose_6.txt  ee_pose_8.txt  ee_pose_9.txt
software/ros-package/src/control/iiwa_pkgs/camera_calib/src/: calculate_extrinsic_params.py  camera_calib_auto.cpp  camera_calib_validation.cpp  camera_calib_viz.cpp  icp_test.cpp  manual_calibration.py  test_calibration_with_endeffector.cpp  tf_matrix_server.py
software/ros-package/src/control/iiwa_pkgs/camera_calib/srv/: TransformationMatrix.srv
software/ros-package/src/control/iiwa_pkgs/iiwa_ex_moveit/: .setup_assistant  CMakeLists.txt  package.xml
software/ros-package/src/control/iiwa_pkgs/iiwa_ex_moveit/config/: iiwa14.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
software/ros-package/src/control/iiwa_pkgs/irl/: CMakeLists.txt  package.xml
software/ros-package/src/control/iiwa_pkgs/motion_planning/: CMakeLists.txt  package.xml
software/ros-package/src/control/iiwa_pkgs/task_planning/: CMakeLists.txt  package.xml
software/ros-package/src/control/iiwa_pkgs/test_pkg/: CMakeLists.txt  package.xml
software/ros-package/src/control/iiwa_pkgs/test_pkg/include/: JDXDemo.hpp
software/ros-package/src/control/iiwa_pkgs/test_pkg/launch/: JDXDemo.launch  iiwa_test.launch
software/ros-package/src/control/iiwa_pkgs/test_pkg/src/: JDXDemo.cpp  TestScript.cpp  fake_joint_state_publisher.cpp  perception_test.cpp
software/ros-package/src/control/iiwa_pkgs/youbot_grasp/: CMakeLists.txt  package.xml
software/ros-package/src/control/iiwa_stack/: .gitrepo
software/ros-package/src/control/iiwa_stack/iiwa_ros/: CMakeLists.txt
software/ros-package/src/control/iiwa_utils/common_utilities/: CMakeLists.txt  package.xml
software/ros-package/src/package/pkg_rss2019/: CMakeLists.txt  package.xml
software/ros-package/src/package/pkg_rss2019/example/: prop_estimator_client.py  push_planner_client.py
software/ros-package/src/package/pkg_rss2019/launch/: demo_push_objects.launch  demo_push_unknown_objects.launch  prob_planner_srv.launch  push_planner_srv.launch
software/ros-package/src/package/pkg_rss2019/src/: demo_prob_push_unknown_objects.cpp  demo_push_objects.cpp  demo_push_unknown_objects.cpp  prob_planner_srv.py  push_planner_srv.py
software/ros-package/src/package/pkg_rss2019/srv/: add_object_srv.srv  estimate_prop_srv.srv  plan_prob_pushing_srv.srv  plan_pushing_srv.srv
software/ros-package/src/perception/camera/: CMakeLists.txt  changkyu_ex.txt  changkyu_pts.txt  package.xml
software/ros-package/src/perception/camera/app/: calibration_on_hand.py  calibration_tags_app.cpp  calibration_tune_app.cpp  camera_recorder_app.cpp  workspace_tune_app.cpp
software/ros-package/src/perception/camera/config/: camera_info_all.yaml  camera_info_tags.yaml  camera_info_tmp.yaml
software/ros-package/src/perception/camera/launch/: calibration_tags.launch  calibration_tune.launch  camera_recoder.launch  workspace_tune.launch  workspace_tune_tmp.launch
software/ros-package/src/perception/camera/src/: camera_config.cpp  camera_utils.cpp
software/ros-package/src/rl_msgs/: CMakeLists.txt  package.xml
software/ros-package/src/rl_msgs/include/rl_msgs/: rl_msgs_conversions.hpp  rl_msgs_visualization.hpp
software/ros-package/src/rl_msgs/msg/: Edge.msg  Graph.msg  Indice.msg  Scene.msg  SegmentationFace.msg  SegmentationObject.msg  SegmentationScene.msg  SegmentationTransforms.msg  Transform.msg
software/ros-package/src/rl_msgs/src/: rl_msgs_conversions.cpp  rl_msgs_visualization.cpp
software/ros-package/src/rl_msgs/srv/: organizer_srv.srv  organizing_detector_jdxdemo_srv.srv  organizing_pusher_jdxdemo_srv.srv  seg_cob_srv.srv  seg_scene_srv.srv  tracking_cloud_srv.srv  tracking_image_srv.srv
software/ros-package/src/utils/: CMakeLists.txt  package.xml
software/ros-package/src/utils/example/: example_intersection_over_union.cpp  example_show_voxel.cpp  example_voxel2mesh.cpp
software/ros-package/src/utils/include/utils/: utils.hpp  utils_filesystem.hpp  utils_inline.hpp  utils_python.hpp  utils_visualization.hpp
software/ros-package/src/utils/src/: utils.cpp  utils_filesystem.cpp  utils_python.cpp  utils_visualization.cpp  visualize_mesh.py
software/simulator/: SimBase.py  SimBullet.py  __init__.py  sim_lcp.py
(+163 files in other folders)
