<?xml version="1.0"?>
<package format="2">
  <name>pkg_rss2019</name>
  <version>0.0.0</version>
  <description>The pkg_rss2019 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cm1074@todo.todo">cm1074</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pkg_icra2019</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>gazebo_msgs</build_depend>
  <exec_depend>gazebo_msgs</exec_depend>  
  <build_depend>rl_msgs</build_depend>
  <exec_depend>rl_msgs</exec_depend>  
  <build_depend>common_utilities</build_depend>
  <exec_depend>common_utilities</exec_depend>  
  <build_depend>motion_planning</build_depend>
  <exec_depend>motion_planning</exec_depend>  
  <build_depend>changkyu_camera</build_depend>
  <exec_depend>changkyu_camera</exec_depend>
  <build_depend>changkyu_segmentation</build_depend>
  <exec_depend>changkyu_segmentation</exec_depend>
  <build_depend>changkyu_planner_pushing</build_depend>
  <exec_depend>changkyu_planner_pushing</exec_depend>
  <build_depend>ar_track_alvar</build_depend>
  <exec_depend>ar_track_alvar</exec_depend>
  <build_depend>aruco</build_depend>
  <exec_depend>aruco</exec_depend>
  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>